// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordPane calls \`swap\` when checkbox is clicked 1`] = `
Array [
  "updateEntity",
  "lock",
  1,
  undefined,
  true,
]
`;

exports[`PasswordPane calls \`swap\` when password changes 1`] = `
Array [
  "updateEntity",
  "lock",
  1,
  "setPassword",
  "newPassword",
  "policy",
]
`;

exports[`PasswordPane disables input when submitting 1`] = `
<div
  className="auth0-lock-input-show-password"
>
  <div
    data-__type="password_input"
    data-disabled={true}
    data-invalidHint="blankErrorHint"
    data-isValid={false}
    data-onChange={[Function]}
    data-placeholder="placeholder"
    data-policy="policy"
    data-showPassword="showPassword"
    data-strengthMessages={Object {}}
    data-value="password"
  />
</div>
`;

exports[`PasswordPane renders correctly 1`] = `
<div
  className="auth0-lock-input-show-password"
>
  <div
    data-__type="password_input"
    data-disabled={false}
    data-invalidHint="blankErrorHint"
    data-isValid={false}
    data-onChange={[Function]}
    data-placeholder="placeholder"
    data-policy="policy"
    data-showPassword="showPassword"
    data-strengthMessages={Object {}}
    data-value="password"
  />
</div>
`;

exports[`PasswordPane renders correctly when \`allowShowPassword\` is true 1`] = `
<div
  className="auth0-lock-input-show-password"
>
  <div
    data-__type="password_input"
    data-disabled={false}
    data-invalidHint="blankErrorHint"
    data-isValid={false}
    data-onChange={[Function]}
    data-placeholder="placeholder"
    data-policy="policy"
    data-showPassword="showPassword"
    data-strengthMessages={Object {}}
    data-value="password"
  />
  <div
    className="auth0-lock-show-password"
  >
    <input
      id="slideOne"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      htmlFor="slideOne"
      title="showPassword"
    />
  </div>
</div>
`;

exports[`PasswordPane sets isValid as true when \`isFieldVisiblyInvalid\` is false 1`] = `
<div
  className="auth0-lock-input-show-password"
>
  <div
    data-__type="password_input"
    data-disabled={false}
    data-invalidHint="blankErrorHint"
    data-isValid={true}
    data-onChange={[Function]}
    data-placeholder="placeholder"
    data-policy="policy"
    data-showPassword="showPassword"
    data-strengthMessages={Object {}}
    data-value="password"
  />
</div>
`;
